<resources>
    <string name="app_name">WearSync</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan for Devices</string>
    <string name="action_stop_logging">Stop Logging on Display</string>
    <string name="action_sync_sleep">Sync Sleep Data</string>

    <!-- Preference Titles -->
    <string name="pref_influx_head">InfluxDB Settings</string>
    <string name="pref_influx_url">URL</string>
    <string name="pref_influx_org">Organization</string>
    <string name="pref_influx_bucket">Bucket</string>
    <string name="pref_influx_token">Token</string>
    <string name="pref_influx_test">Test Connection</string>
    <string name="pref_influx_test_sub">Test your connection to the influxdb server.</string>

    <!-- Splash Screen -->
    <string name="root_title">Request Root</string>
    <string name="root_grant">Please grant root permissions\n(For accessing mi fitness db)</string>
    <string name="root_button">Test root</string>
</resources>