<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/pref_influx_head">

        <EditTextPreference
            app:defaultValue="https://influx.hydev.org"
            app:key="infUrl"
            app:title="@string/pref_influx_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="infOrg"
            app:title="@string/pref_influx_org"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="hydev" />

        <EditTextPreference
            app:key="infBucket"
            app:title="@string/pref_influx_bucket"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="hydev" />

        <EditTextPreference
            app:key="infToken"
            app:title="@string/pref_influx_token"
            app:useSimpleSummaryProvider="true"
            android:inputType="textPassword" />

        <Preference
            android:key="infTestButton"
            app:title="@string/pref_influx_test"
            app:summary="@string/pref_influx_test_sub" />

        <Preference
            android:key="infTest2Button"
            app:title="@string/pref_influx_test2"
            app:summary="@string/pref_influx_test2_sub" />

    </PreferenceCategory>

</PreferenceScreen>