<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.hydev.wearsync.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_logging"
        android:orderInCategory="100"
        android:title="@string/action_stop_logging"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync_sleep"
        android:orderInCategory="100"
        android:title="@string/action_sync_sleep"
        app:showAsAction="never" />
</menu>